...
        <!-- Back Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/Backbuttonentries"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:text="Back" />
        </LinearLayout>

        <!-- Journal Date -->
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <EditText
                android:id="@+id/chatInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:hint="Type a message..."
                android:padding="10dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/sendChatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Send" />
        </LinearLayout>

        <!-- User Journal Entry -->
        <EditText
            android:id="@+id/journalEntryInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:gravity="top"
            android:hint="@string/write_your_journal_entry_here_hint"
            android:minHeight="200dp"
...
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="Selected Image" />

        <!-- Save Button -->
        <Button
            android:id="@+id/Saveentrybutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/save_entry_button" />

        <!-- Action Buttons -->
...
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/editbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_edit" />

            <ImageButton
                android:id="@+id/addimageButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_input_add" />

            <ImageButton
                android:id="@+id/deletebutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_delete" />

        </LinearLayout>
...
